--- a/public/sass/bodystyle.scss
+++ b/public/sass/bodystyle.scss
@@ -688,7 +688,7 @@ and (orientation: portrait)
   
   .login-reg-form {
     width: 800px;
-    border: solid $value;
+    border: solid #cf9d71;
     margin: 0% 37%;
     background: #2a2c2fc7;
     border-radius: 5px;
