--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -6,16 +6,13 @@ Author URI: http://templateonweb.com/
 Licence: <a href="http://www.templateonweb.com/terms.php?v=content&contentid=152">Website Template Licence</a>
 */
 /*********************checkout****************/
-.check_rm{
- padding-top:40px;
- padding-bottom:40px;
- background:#fafafa;
- margin-top:40px;
- }
-.check_lm{
- padding-top:40px;
- padding-bottom:40px;
- }
+
+.check_lm {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  width: 500px;
+}
+*
 .check_lm1 ul li{
 display:inline-block;
 padding-right:10px; 
@@ -27,19 +24,21 @@ margin-left:5px;
 .check_lm3{
  margin-top:15px;
  }
-.check_lm3 .form-control{
-height:45px;
- }
+ .check_lm3 .form-control {
+  height: 45px;
+  width: 100%;
+}
 .check_1 {
 vertical-align:bottom;
 }
 .check_lm3 h5 span{
  margin-left:5px;
  }
-.check_lm4 .form-control{
-height:45px;
-margin-top:15px;
- }
+ .check_lm4 .form-control {
+  height: 45px;
+  margin-top: 15px;
+  width: 100%;
+}
 .check_lm5 h5 span{
  margin-left:5px;
  }
@@ -75,20 +74,12 @@ margin-top:15px!important;
  
 }
 
-@media (min-width:768px) and (max-width:991px) {
-
- }
-@media (min-width:992px) and (max-width:1200px) {
-
- }
-@media (min-width:1201px) and (max-width:1280px) {
-
- }
 
  ._center {
-    position: relative;
-    left: 90px;
-    top: -6px;
+  position: relative;
+  left: 24rem;
+  bottom: 5rem;
+  width: 88%;
 }
 
 img.debit-icon {
@@ -141,7 +132,7 @@ img.debit-icon {
   
   /* The Close Button */
   .close {
-    color: white;
+    color: #0e0d0d;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -172,7 +163,7 @@ img.debit-icon {
   .modal_btn {
     position: relative;
     top: -6px;
-    right: 35%;
+    left: 12rem;
 }
 img.modal-payment {
     position: relative;
@@ -188,16 +179,16 @@ img.info {
 }
 
 div#contacts {
-    background-color: #d0650f0a;
+    background-color: #f7f7f70a;
 }
 div#adds {
-    background-color: #d0650f0a;
+    background-color: #f7f7f70a;
 }
 
 ._sbtn {
     position: relative;
     top: 10px;
-    left: 60px;
+    left: 178px;
 }
 
 img.check-icon {
@@ -205,3 +196,134 @@ img.check-icon {
   right: 10px;
   width: 15px;
 }
+
+.container1 {
+  padding-left: 100px;
+  position: relative;
+  width: 41%;
+  left: 13rem;
+}
+
+.checkout_1.clearfix {
+  display: flex;
+  position: relative;
+  left: 6rem;
+}
+
+.check_rm {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  width: 263%;
+  position: relative;
+  left: 5rem;
+  top: 1rem;
+}
+.checkout_1r.clearfix {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.checkout_1r1.clearfix {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.check_lm2.clearfix {
+  width: 100%;
+}
+.checkout_1l3.clearfix {
+  width: 100%;
+}
+
+div#adds {
+  margin-left: 14px;
+}
+textarea.txt-size {
+  width: 100%;
+  height: 100px;
+}
+
+.move-right {
+  position: relative;
+  bottom: 20px;
+  margin-left: 47%;
+}
+h5.mgt.move-right.move-to-top.move-to-free {
+  position: relative;
+  top: -55px;
+}
+h5.mgt.move-right.move-to-top.margin-top {
+  position: relative;
+  top: -37px;
+}
+
+h5.move-free-data {
+  position: relative;
+  bottom: 12rem;
+  left: 15rem;
+}
+h5.move-free-data1 {
+  position: relative;
+  bottom: 17rem;
+  left: 15rem;
+}
+/* .move-to-top-rem {
+  position: relative;
+  bottom: 9rem;
+} */
+
+.check_rm.clearfix {
+  background-color: #efefef87;
+}
+h6.text-right {
+  position: relative;
+  left: 18rem;
+  bottom: 2rem;
+}
+
+.move-to-center {
+  position: relative;
+  bottom: 2rem;
+  left: 9rem;
+}
+.size-height {
+  height: 10px;
+}
+div#contacts {
+  margin-left: 14px;
+}
+h6.size-color {
+  position: relative;
+  color: #f6610a7a;
+  bottom: 42px;
+  left: 198px;
+}
+h6.size-color1 {
+  position: relative;
+  color: #f6610a7a;
+  bottom: 42px;
+  left: 221px;
+}
+h4.check-title {
+  color: #f6740a;
+}
+
+
+
+/* @Media Queries */
+
+
+@media only screen 
+and (max-width: 1024px)
+and (min-width: 768px)
+and (orientation: portrait){
+
+  .footers-copyright {
+    display: flex;
+    width: 100%;
+    height: 365px;
+}
+.footer-desc.footer-gallery {
+  display: none;
+}
+
+}
+
