--- a/public/css/global.css
+++ b/public/css/global.css
@@ -555,7 +555,7 @@ width:100%;
  }
 }
 @media (min-width:768px) and (max-width:991px) {
-.container{
+.container1{
  padding-left:20px;
  padding-right:20px;
  }
@@ -614,4 +614,10 @@ line-height:1.4em;
  }
 
 
-
+ .container {
+  max-width: 100%;
+  width: 1920px;
+  padding: 0;
+  position: relative;
+    max-width: 1920px;
+}
