--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1355,30 +1355,12 @@ div#myDropdown {
     text-align: right;
 }
 
-
-/* span.inputs {
-    width: 290px;
-    height: 70px;
-    background-color: white;
-    border-radius: 4px;
-    align-items: center;
-    /* padding: 20px; */
-    display: flex;
-} */
-/* button.btn-search {
-    width: 76px;
-    height: 70px;
-
+input.btn.btn-default {
+    background-color: #ff8a05;
+    color: white;
 }
-span .inputs i {
-    font-size: 20px;
-    color: #777;
 
-}  */
-/* span .inputs .btn-search {
-    flex: 1;
-    height: 40px;
-    border: none;
-    outline: none;
-    font-size: 18px;
-} */
+input.btn.btn-default:hover{
+
+    background-color: #e67d06;
+}
