--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -544,10 +544,10 @@ button.addcart {
   .shop-item-col {
     width: 100%;
   }
-  .shop-conts {
+  /* .shop-conts {
     display: none;
     border: solid #c4a256;
-  }
+  } */
   
   .shop-sub-container3 {
     width: 100%;
