--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -63,9 +63,8 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  width: 210px;
+  /* width: 210px; */
   position: relative;
-  left: -6px;
 }
 
 .buttoncat:hover {
