--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -63,8 +63,9 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  /* width: 210px; */
+  width: 210px;
   position: relative;
+  left: -6px;
 }
 
 .buttoncat:hover {
@@ -717,7 +718,7 @@ input {
   .signup-inputs {
     width: 113%;
     position: relative;
-    left: -6rem;
+    left: -7rem;
   }
 }
 
