--- a/public/css/contactresponsive.css
+++ b/public/css/contactresponsive.css
@@ -55,6 +55,7 @@ h1.text-center {
     text-align: center;
 }
 
+/* New update 012821 */
 @media only screen 
 and (max-width: 1024px)
 and (min-width: 768px)
@@ -63,9 +64,66 @@ and (orientation: portrait)
 
     .container-left {
         position: relative;
-        left: 12%;
+        left: 5%;
     }
-
+    #contact .container {
+        width: 1300px;
+    }
+    .contact_1 h3 {
+        padding: 0;
+        margin: 0;
+        padding-top: 15px;
+        font-size: 32px;
+        padding-bottom: 15px;
+        color: #000;
+    }
+    h1.text-center {
+        position: relative;
+        left: 49%;
+    }
+    .contact_1.text-left {
+        position: relative;
+        right: 50%;
+        text-align: center;
+        font-size: 26px;
+    }
+    .contact_1.text-center {
+        position: relative;
+        left: -10%;
+        text-align: center;
+        font-size: 26px;
+    }
+    .contact_1.text-right {
+        position: relative;
+        left: 38%;
+        text-align: center;
+        font-size: 26px;
+    }
+    #contact .touch {
+        padding: 0;
+        margin: 0;
+        padding-top: 50px;
+        padding-bottom: 30px;
+        color: #000;
+        font-size: 28px;
+    }
+    .contact_2 .form-control {
+        min-height: 65px;
+        margin-bottom: 30px;
+        font-size: 26px;
+    }
+    input.form-control {
+        width: 100%;
+    }
+    textarea.form-control.form_1 {
+        width: 120%;
+        font-size: 26px;
+    }
+    .move-to-right {
+        position: relative;
+        left: 150%;
+        bottom: 22%;
+    }
 
 }
 
@@ -79,6 +137,8 @@ and (orientation: landscape){
         position: relative;
         left: 14%;
     }
+    
+    
 }
 
 @media only screen
@@ -99,10 +159,10 @@ and (min-width: 375px)
 and (orientation: portrait)
 {
 
-    .container-left {
+    /* .container-left {
         position: relative;
         left: 13%;
-    }
+    } */
 
 }
 
@@ -112,10 +172,7 @@ and (min-width: 375px)
 and (orientation: landscape)
 {
 
-    .container-left {
-        position: relative;
-        left: 13%;
-    }
+    
 
 }
 
@@ -227,3 +284,84 @@ and (orientation: portrait)
         padding-top: 50px;
     }
 }
+
+
+@media only screen 
+and (max-width: 731px)
+and (min-width: 411px)
+and (orientation: portrait)
+{
+    .des-logo img {
+        width: 350px;
+    }
+    .headmenu .des-logo .logos {
+        margin-left: 15px;
+    }
+    #contact .container {
+        width: 1245px;
+    }
+    .container-left {
+        position: relative;
+        left: 7%;
+    }
+    #contact h1 {
+        padding: 0;
+        margin: 0;
+        color: #000;
+        font-size: 42px !important;
+        padding-bottom: 60px;
+        position: relative;
+        left: 45%;
+    }   
+    .contact_1 h3 {
+        padding: 0;
+        margin: 0;
+        padding-top: 15px;
+        font-size: 36px;
+        padding-bottom: 15px;
+        color: #000;
+    }
+    .contact_1.text-left {
+        position: relative;
+        right: 45%;
+        text-align: center;
+        font-size: 27px;
+    }
+    .contact_1.text-center {
+        position: relative;
+        left: -22%;
+        text-align: center;
+        font-size: 27px;
+    }
+    .contact_1.text-right {
+        position: relative;
+        left: 0%;
+        text-align: center;
+        font-size: 27px;
+    }
+    #contact .touch {
+        padding: 0;
+        margin: 0;
+        padding-top: 50px;
+        padding-bottom: 30px;
+        color: #000;
+        font-size: 30px;
+    }
+    .contact_2 .form-control {
+        min-height: 90px;
+        margin-bottom: 30px;
+        font-size: 28px;
+    }
+    input.form-control {
+        width: 90%;
+    }
+    textarea.form-control.form_1 {
+        width: 102%;
+        font-size: 28px;
+    }
+    .move-to-right {
+        position: relative;
+        left: 136%;
+        bottom: 20%;
+    }
+}    
